@@ -4,6 +4,7 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha2 
+	- Fixed Advanced random
   	- Fixed missing artist name on Albums of the Moment
 	- Added simple Playlist element view, non-editable
   	- Fixed double posting of songs on a single stream with some
